update links to javadoc

--- a/web/index.html
+++ b/web/index.html
@@ -91,11 +91,13 @@ permalink: "{{ page.filePathStem }}.html"
       <dt><a href="api/java/smile/feature/package-summary.html">Feature Engineering and Selection</a></dt>
       <dd><p>
         <a href="api/java/smile/feature/Bag.html">Bag of Words</a>,
-        <a href="api/java/smile/feature/DateFeature.html">Date Features</a>,
-        <a href="api/java/smile/feature/Nominal2Binary.html">One Hot Encoding</a>,
-        <a href="api/java/smile/feature/Nominal2SparseBinary.html">Sparse One Hot Encoding</a>,
-        <a href="api/java/smile/feature/NumericAttributeFeature.html">Numeric Feature Standardization</a>,
-        <a href="api/java/smile/feature/GAFeatureSelection.html">Genetic Algorithm based Feature Selection</a>,
+        <a href="api/java/smile/feature/SparseOneHotEncoder.html">Sparse One Hot Encoding</a>,
+        <a href="api/java/smile/feature/Standardizer.html">Standardizer</a>,
+        <a href="api/java/smile/feature/RobustStandardizer.html">Robust Standardizer</a>,
+        <a href="api/java/smile/feature/MaxAbsScaler.html">Maximum Absolute Value Scaler</a>,
+        <a href="api/java/smile/feature/WinsorScaler.html">Winsor Scaler</a>,
+        <a href="api/java/smile/feature/Normalizer.html">Normalizer</a>,
+        <a href="api/java/smile/feature/GAFE.html">Genetic Algorithm based Feature Selection</a>,
         <a href="api/java/smile/classification/RandomForest.html">Ensemble Learning based Feature Selection</a>,
         <a href="api/java/smile/feature/SignalNoiseRatio.html">Signal Noise ratio</a>,
         <a href="api/java/smile/feature/SumSquaresRatio.html">Sum Squares ratio</a>
