simplify nav bar

--- a/web/gallery.html
+++ b/web/gallery.html
@@ -3,7 +3,7 @@ layout: layout.njk
 permalink: "{{ page.filePathStem }}.html"
 ---
 <div class="col-md-12">
-    <h1 class="gallery-top">Smile Gallery</h1>
+    <h1 class="gallery-top">Gallery</h1>
 
     <table class="center" width="100%">
         <tr>
