--- a/web/overview.html
+++ b/web/overview.html
@@ -5,7 +5,7 @@ permalink: "{{ page.filePathStem }}.html"
 {% include "toc.njk" %}
 
 <div class="col-md-9 col-md-pull-3">
-    <h1 id="overview-top" class="title">Machine Learning</h1>
+    <h1 id="overview-top" class="title">What's Machine Learning</h1>
 
     <p>Machine learning is a type of artificial intelligence that provides computers with the ability
         to learn without being explicitly programmed. Machine learning algorithms can make
