--- a/web/quickstart.html
+++ b/web/quickstart.html
@@ -217,7 +217,7 @@ smile&gt;
         the model on new data samples with the method <code>predict</code>.</p>
 
     <div id="btnv">
-        <a class="btn-next-text" href="overview.html" title="Next Section: Machine Learning"><span>Machine Learning</span></a>
+        <a class="btn-next-text" href="overview.html" title="Next Section: What's Machine Learning"><span>What's Machine Learning</span></a>
         <span class="btn-arrow-right">&nbsp;&rarr;</span>
     </div>
 </div>
