fix: typo in doc

--- a/web/validation.html
+++ b/web/validation.html
@@ -162,7 +162,7 @@ permalink: "{{ page.filePathStem }}.html"
     <p>Hold-out testing assume that all data
         samples are independently and identically distributed (this is also
         the basic assumption of most learning algorithms).
-        A part of the data is hold out for testing. Many benchmark data
+        A part of the data is held out for testing. Many benchmark data
         contain a separate test dataset.</p>
 
     <pre class="prettyprint lang-scala"><code>
