update ammonite version

--- a/web/data.html
+++ b/web/data.html
@@ -72,7 +72,7 @@ permalink: "{{ page.filePathStem }}.html"
 
     <h2 id="DataFrame">DataFrame</h2>
 
-    <p>Many Smile algorithms take simple <code>double[]</code> as input. But we often use
+    <p>Many Smile algorithms take simple <code>double[]</code> as input. But we also use
         the encapsulation class <a href="api/java/smile/data/DataFrame.html">DataFrame</a>.
         In fact, the output of most Smile data parsers is a DataFrame object.
         DataFrames are immutable and contain a fixed number of named columns.</p>
