--- a/web/visualization.html
+++ b/web/visualization.html
@@ -96,7 +96,7 @@ permalink: "{{ page.filePathStem }}.html"
         whole picture. A general practice is plot all the attribute pairs. For example,</p>
 
     <pre class="prettyprint lang-scala"><code>
-    plot(iris, '*', Array(RED, BLUE, CYAN))
+    show(plot(iris, "class", '*', Array(RED, BLUE, CYAN)))
     </code></pre>
 
     <div style="width: 100%; display: inline-block; text-align: center;">
