--- a/web/linear-algebra.html
+++ b/web/linear-algebra.html
@@ -37,7 +37,7 @@ permalink: "{{ page.filePathStem }}.html"
 
     <h2 id="special" class="title">Special Functions</h2>
 
-    <p>Special mathematical functions including <code>beta</code>,
+    <p>Special mathematical functions include <code>beta</code>,
         <code>erf</code>, <code>gamma</code> and their related functions. Special
         functions are particular mathematical functions which have more or less
         established names and notations due to their importance in mathematical
