--- a/web/nlp.html
+++ b/web/nlp.html
@@ -447,7 +447,7 @@ res21: Seq[NGram] = Buffer(
         on the string to return an array of (word, tag) pairs. Because
         PoS tags are often used as features along with other attributes
         in machine learning algorithms, the sentence is typically
-        already split into words. In this case, just call <code>postab(words)</code>
+        already split into words. In this case, just call <code>postag(words)</code>
         on an array of words.</p>
 
     <pre class="prettyprint lang-scala"><code>
