faq on citation

--- a/web/faq.html
+++ b/web/faq.html
@@ -7,6 +7,17 @@ permalink: "{{ page.filePathStem }}.html"
 <div class="col-md-9 col-md-pull-3">
     <h1 id="faq-top" class="title">FAQ</h1>
 
+    <h2 class="question" id="cite">How should I cite Smile?</h2>
+    <p class="answer">Please cite Smile in your publications if it helps your research. Here is an example BibTeX entry:</p>
+    <pre><code>
+    @misc{Li2014Smile,
+      title={Smile},
+      author={Haifeng Li},
+      year={2014},
+      howpublished={\url{https://haifengl.github.io}},
+    }
+    </code></pre>
+
     <h2 class="question" id="link-with-smile">Link with Smile</h2>
     <p class="answer">
         Smile artifacts are hosted in <a href="https://oss.sonatype.org/#nexus-search;quick~smile-core">Sonatype Nexus</a>.
